location api's added
